--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-horizontal-scrolling-menu": "^7.1.8",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
