--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.7",
     "country-state-city": "^3.2.1",
     "react": "^18.3.1",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.3.1",
     "react-horizontal-scrolling-menu": "^7.1.8",
     "react-hot-toast": "^2.4.1",
@@ -18,6 +19,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-super-responsive-table": "^6.0.0",
     "react-toastify": "^10.0.5",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
