--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-super-responsive-table": "^6.0.0",
-    "react-toastify": "^10.0.5",
+    "react-hot-toast": "^10.0.5",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
