--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -14,14 +15,13 @@
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.3.1",
     "react-horizontal-scrolling-menu": "^7.1.8",
-    "react-hot-toast": "^2.4.1",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-super-responsive-table": "^6.0.0",
-    "react-hot-toast": "^10.0.5",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
